# Game-Engine-Demo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  asan_suppressions.txt  compare_recovery.py  imgui.ini
engine/: CMakeLists.txt
engine/include/Engine/: Application.h  ConsoleCommandRegistry.h  ConsoleLog.h  ConsolePanel.h  ConsoleVariable.h  DockspaceBuilder.h  ImGuiManager.h  InspectorPanel.h  MemoryPanel.h  MemoryTracker.h  PCH.h  PerformanceWindow.h  Profiler.h  SceneHierarchyPanel.h  Types.h  UIManager.h  UiHelpers.h
engine/include/Engine/Animation/: AnimStateMachine.h  AnimationBatch.h  AnimationBlend.h  AnimationCompression.h  AnimationController.h  AnimationGlobalTimeline.h  AnimationInstance.h  AnimationKeyFrame.h  AnimationLayer.h  AnimationLocalTimeline.h  AnimationManager.h  AnimationPipeline.h  AnimationPose.h  AnimationResource.h  AnimationRetarget.h  AnimationTrack.h  BlendMask.h  BlendSpace1D.h  BlendSpace2D.h  BlendTree.h  Bone.h  Constraint.h  ConstraintSolver.h  ConstraintTarget.h  IK.h  Locator.h  Skeleton.h  SkinnedMesh.h  SkinningComponent.h
engine/include/Engine/Audio/: AudioEngine.h  AudioSource.h  AudioSystem.h  AudioTypes.h
engine/include/Engine/Box2D/: Box2DPhysicsWorld.h
engine/include/Engine/Core/: AsyncStream.h  BufferVisualization.h  Config.h  EngineSettings.h  EventBus.h  FileStream.h  FileSystem.h  GeometryDebug.h  HelperToggles.h  IGraphicsFactory.h  IRenderContext.h  IUIManager.h  IWindow.h  Input.h  InputAction.h  InputManager.h  JobSystem.h  LightingDebug.h  Log.h  MenuManager.h  PostProcessingDebug.h  StartupQueue.h  SubsystemConfig.h  SubsystemManager.h  TaskManager.h  TextureDebug.h  UserSettings.h  ViewMode.h
engine/include/Engine/Debug/: CrashContext.h  (+4 more)
engine/src/Animation/: AnimStateMachine.cpp  AnimationBatch.cpp  AnimationBlend.cpp  AnimationCompression.cpp  AnimationController.cpp  AnimationGlobalTimeline.cpp  AnimationInstance.cpp  AnimationLayer.cpp  AnimationLocalTimeline.cpp  AnimationManager.cpp  AnimationPipeline.cpp  AnimationPose.cpp  AnimationRetarget.cpp  AnimationTrack.cpp  BlendSpace1D.cpp  BlendSpace2D.cpp  BlendTree.cpp  Bone.cpp  Constraint.cpp  ConstraintSolver.cpp  IK.cpp  Locator.cpp  Skeleton.cpp  SkinnedMesh.cpp  SkinningComponent.cpp
engine/src/Audio/: AudioAssetManager.cpp  AudioBusManager.cpp  AudioClip.cpp  AudioClipManager.cpp  AudioEffect.cpp  AudioEngine.cpp  AudioLoader.cpp  AudioSource.cpp  AudioSourceComponent.cpp  AudioSystem.cpp  Listener.cpp  SpatialAudioManager.cpp
engine/src/Box2D/: Box2DContactListener.cpp  Box2DContactListener.h  Box2DDebugDraw.cpp  Box2DDebugDraw.h  Box2DJoint.cpp  Box2DJoint.h  Box2DPhysicsBody.cpp  Box2DPhysicsBody.h  Box2DPhysicsWorld.cpp  Box2DPhysicsWorld.h
engine/src/Core/: Application.cpp  AsyncStream.cpp  Config.cpp  ConsoleCommandRegistry.cpp  ConsoleLog.cpp  ConsolePanel.cpp  ConsoleVariable.cpp  EngineSettings.cpp  FileStream.cpp  FileSystem.cpp  ImGuiManager.cpp  InputAction.cpp  InputManager.cpp  InspectorPanel.cpp  JobSystem.cpp  Log.cpp  MemoryPanel.cpp  MemoryTracker.cpp  MenuManager.cpp  PerformanceWindow.cpp  Profiler.cpp  SceneHierarchyPanel.cpp  StartupQueue.cpp  SubsystemManager.cpp  TaskManager.cpp  Time.cpp  UIManager.cpp  UiHelpers.cpp  UserSettings.cpp
engine/src/Debug/: CrashContext.cpp  CrashHandler.cpp  ProfilerCore.cpp  ScreenshotCapture.cpp  StackTrace.cpp
engine/src/Editor/: AssetBrowserPanel.cpp  AssetDatabase.cpp  ContentBrowserPanel.cpp  DependencyGraphPanel.cpp  DependencyTracker.cpp  DockspaceBuilder.cpp  EditorCamera.cpp  EditorOverlay.cpp  EditorSceneManager.cpp  EditorTools.cpp  EngineEditor.cpp  GUID.cpp  InspectorPanel.cpp  MainMenuBar.cpp  PickingFBO.cpp  ProfilerPanel.cpp  PropertyDrawer.cpp  Reflect.cpp  SceneManagerPanel.cpp  ScenePanel.cpp  ScenePanelMediator.cpp  SceneViewerPanel.cpp  StatusBar.cpp  Toolbar.cpp  UndoSystem.cpp  ViewModePanel.cpp  ViewportPanel.cpp  ViewportSerializer.cpp
engine/src/OpenAL/: OpenALAudioBuffer.cpp  OpenALAudioEngine.cpp  OpenALAudioSource.cpp
engine/src/OpenGL/: OpenGLAntiAliasing.cpp  OpenGLComputeParticles.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLGBuffer.cpp  OpenGLGBuffer.h  OpenGLGraphicsFactory.cpp
engine/src/Platform/: FileDialog.cpp  GlfwInput.cpp  GlfwWindow.cpp
engine/src/Rendering/: GameHUD.cpp  TextRenderer.cpp
engine/src/Scripting/: LuaEngine.cpp  PluginSystem.cpp
engine/src/core/: Application.cpp
engine/src/platform/: GlfwWindow.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
sandbox/src/AnimationDemo/: AnimationDemoApp.cpp  AnimationDemoApp.h  main.cpp
sandbox/src/AnimationTest/: AnimationTestApp.cpp  AnimationTestApp.h  main.cpp
sandbox/src/AudioPhysicsSandbox/: AudioPhysicsSandboxApp.cpp  AudioPhysicsSandboxApp.h  main.cpp
sandbox/src/AudioSystemTest/: main.cpp
sandbox/src/AudioTest/: AudioTestApp.cpp  AudioTestApp.h  main.cpp
sandbox/src/BarePhysicsTest/: BarePhysicsTestApp.cpp  BarePhysicsTestApp.h  main.cpp
sandbox/src/CollisionAudioTest/: CollisionAudioTestApp.cpp  CollisionAudioTestApp.h  main.cpp
sandbox/src/ComplexSceneTest/: ComplexSceneTestApp.cpp  ComplexSceneTestApp.h  main.cpp
sandbox/src/CrashTest/: main.cpp
sandbox/src/EditorDemo/: EditorDemoApp.h  EditorDemoTest.cpp  EditorDemoTest.h  main.cpp
sandbox/src/GameObjectTest/: GameObjectTest.cpp  GameObjectTest.h  main.cpp
sandbox/src/ImGuiDemo/: ImGuiDemoApp.h  main.cpp
sandbox/src/ImGuiTest/: ImGuiTestApp.h  main.cpp
sandbox/src/InputTest/: InputTestApp.cpp  InputTestApp.h  main.cpp
sandbox/src/MarioDemo/: MarioDemoApp.cpp  MarioDemoApp.h  main.cpp
sandbox/src/PhysicsTest/: PhysicsTestApp.cpp  PhysicsTestApp.h  main.cpp
sandbox/src/SerializationTest/: SerializationTest.cpp  SerializationTest.h  main.cpp
sandbox/src/SpriteBatchTest/: SpriteBatchTest.cpp  SpriteBatchTest.h  main.cpp
sandbox/src/SystemTest/: SystemTestApp.cpp  SystemTestApp.h  main.cpp
sandbox/src/TextureManagerTest/: TextureManagerTest.cpp  TextureManagerTest.h  main.cpp
sandbox/src/_3DTest/: _3DTestApp.cpp  _3DTestApp.h  main.cpp
(+247 files in other folders)
